# language-exchange-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  COMMANDS.md  Dockerfile  QUICKSTART_TESTING.md  QUICK_TEST.sh  README.md  SETUP.md  SETUP_CHECKLIST.md  SETUP_FROM_SCRATCH.md  TESTING.md  TROUBLESHOOTING.md  fly.prod.toml  fly.toml  nodemon.json  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup_sheets_template.md
.github/prompts/: spec-kitty.accept.prompt.md  spec-kitty.analyze.prompt.md  spec-kitty.checklist.prompt.md  spec-kitty.clarify.prompt.md  spec-kitty.constitution.prompt.md  spec-kitty.dashboard.prompt.md  spec-kitty.implement.prompt.md  spec-kitty.plan.prompt.md  (+5 more)
bug-reports/: 001-listdates-help-menu-incorrect.md
docs/: test-coverage-plan.md
scripts/: .gitkeep  README.md  setup_google_sheets.py
src/: __init__.py  bot.py
tests/: __init__.py  conftest.py  helpers.py  test_auth.py  test_cache_service.py  test_config_cmd.py  test_config_cmd_handlers.py  test_config_meta.py  test_date_parser.py  test_help_coverage.py  test_hosting_cmd.py  test_logger.py  test_make_audit.py  test_meeting_schedule.py  test_models.py  test_pattern_parser.py  test_reset_cmd.py  test_schedule_announcement.py  test_schedule_cmd.py  test_setup_wizard.py  test_setup_wizard_flow.py  test_sheet_cmd.py  test_sheets_config_loader.py  test_sheets_service.py  test_should_post_schedule.py  test_sync_cmd.py  test_unvolunteer_cmd.py  test_volunteer_cmd.py  test_warning_service.py  test_warnings_cmd.py
(+68 files in other folders)
